// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderer/components/notifications/RepositoryNotifications.tsx should render itself & its children 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
        >
          <button
            aria-describedby=":r0:-loading-announcement"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-loading="false"
            data-no-visuals="true"
            sx="[object Object]"
            title="Open repository"
            type="button"
          >
            <span
              class="Box-sc-g0xbh4-0 lbSBsX"
              data-component="buttonContent"
              sx="[object Object]"
            >
              <span
                data-component="text"
              >
                <div
                  class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                  data-align="center"
                  data-direction="horizontal"
                  data-gap="condensed"
                  data-justify="start"
                  data-padding="none"
                  data-wrap="nowrap"
                >
                  <img
                    alt=""
                    class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                    data-component="Avatar"
                    height="18"
                    size="18"
                    src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                    sx="[object Object]"
                    width="18"
                  />
                  <span
                    class="Text-sc-17v1xeu-0 gCQeDW"
                  >
                    gitify-app/notifications-test
                  </span>
                </div>
              </span>
              <span
                class="Box-sc-g0xbh4-0 bPvALJ"
                data-component="trailingVisual"
                sx="[object Object]"
              >
                <span
                  aria-hidden="true"
                  class="Box-sc-g0xbh4-0 dZZxCI"
                  data-component="ButtonCounter"
                  sx="[object Object]"
                >
                  2
                </span>
                <span
                  class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                >
                   (
                  2
                  )
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <button
              aria-describedby=":r2:-loading-announcement"
              aria-labelledby=":r1:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r1:"
              popover="auto"
            >
              Mark repository as done
            </span>
            <button
              aria-describedby=":r4:-loading-announcement"
              aria-labelledby=":r3:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-read"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r3:"
              popover="auto"
            >
              Mark repository as read
            </span>
            <button
              aria-describedby=":r6:-loading-announcement"
              aria-labelledby=":r5:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r5:"
              popover="auto"
            >
              Hide repository notifications
            </span>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
    >
      <div
        class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
      >
        <button
          aria-describedby=":r0:-loading-announcement"
          class="types__StyledButton-sc-ws60qy-0 ggqBNv"
          data-loading="false"
          data-no-visuals="true"
          sx="[object Object]"
          title="Open repository"
          type="button"
        >
          <span
            class="Box-sc-g0xbh4-0 lbSBsX"
            data-component="buttonContent"
            sx="[object Object]"
          >
            <span
              data-component="text"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <img
                  alt=""
                  class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                  data-component="Avatar"
                  height="18"
                  size="18"
                  src="https://avatars.githubusercontent.com/u/133795385?s=200&v=4"
                  sx="[object Object]"
                  width="18"
                />
                <span
                  class="Text-sc-17v1xeu-0 gCQeDW"
                >
                  gitify-app/notifications-test
                </span>
              </div>
            </span>
            <span
              class="Box-sc-g0xbh4-0 bPvALJ"
              data-component="trailingVisual"
              sx="[object Object]"
            >
              <span
                aria-hidden="true"
                class="Box-sc-g0xbh4-0 dZZxCI"
                data-component="ButtonCounter"
                sx="[object Object]"
              >
                2
              </span>
              <span
                class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
              >
                 (
                2
                )
              </span>
            </span>
          </span>
        </button>
      </div>
      <div
        class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
          data-align="center"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <button
            aria-describedby=":r2:-loading-announcement"
            aria-labelledby=":r1:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r1:"
            popover="auto"
          >
            Mark repository as done
          </span>
          <button
            aria-describedby=":r4:-loading-announcement"
            aria-labelledby=":r3:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-read"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r3:"
            popover="auto"
          >
            Mark repository as read
          </span>
          <button
            aria-describedby=":r6:-loading-announcement"
            aria-labelledby=":r5:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-chevron-down"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r5:"
            popover="auto"
          >
            Hide repository notifications
          </span>
        </div>
      </div>
    </div>
    <div>
      NotificationRow
    </div>
    <div>
      NotificationRow
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notifications/RepositoryNotifications.tsx should toggle repository notifications visibility 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
        >
          <button
            aria-describedby=":r13:-loading-announcement"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-loading="false"
            data-no-visuals="true"
            sx="[object Object]"
            title="Open repository"
            type="button"
          >
            <span
              class="Box-sc-g0xbh4-0 lbSBsX"
              data-component="buttonContent"
              sx="[object Object]"
            >
              <span
                data-component="text"
              >
                <div
                  class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                  data-align="center"
                  data-direction="horizontal"
                  data-gap="condensed"
                  data-justify="start"
                  data-padding="none"
                  data-wrap="nowrap"
                >
                  <img
                    alt=""
                    class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                    data-component="Avatar"
                    height="18"
                    size="18"
                    sx="[object Object]"
                    width="18"
                  />
                  <span
                    class="Text-sc-17v1xeu-0 gCQeDW"
                  >
                    gitify-app/notifications-test
                  </span>
                </div>
              </span>
              <span
                class="Box-sc-g0xbh4-0 bPvALJ"
                data-component="trailingVisual"
                sx="[object Object]"
              >
                <span
                  aria-hidden="true"
                  class="Box-sc-g0xbh4-0 dZZxCI"
                  data-component="ButtonCounter"
                  sx="[object Object]"
                >
                  2
                </span>
                <span
                  class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                >
                   (
                  2
                  )
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <button
              aria-describedby=":r15:-loading-announcement"
              aria-labelledby=":r14:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r14:"
              popover="auto"
            >
              Mark repository as done
            </span>
            <button
              aria-describedby=":r17:-loading-announcement"
              aria-labelledby=":r16:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-read"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r16:"
              popover="auto"
            >
              Mark repository as read
            </span>
            <button
              aria-describedby=":r19:-loading-announcement"
              aria-labelledby=":r18:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-right"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M6.22 3.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.751.751 0 0 1-1.042-.018.751.751 0 0 1-.018-1.042L9.94 8 6.22 4.28a.75.75 0 0 1 0-1.06Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r18:"
              popover="auto"
            >
              Show repository notifications
            </span>
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
        >
          <button
            aria-describedby=":r1a:-loading-announcement"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-loading="false"
            data-no-visuals="true"
            sx="[object Object]"
            title="Open repository"
            type="button"
          >
            <span
              class="Box-sc-g0xbh4-0 lbSBsX"
              data-component="buttonContent"
              sx="[object Object]"
            >
              <span
                data-component="text"
              >
                <div
                  class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                  data-align="center"
                  data-direction="horizontal"
                  data-gap="condensed"
                  data-justify="start"
                  data-padding="none"
                  data-wrap="nowrap"
                >
                  <img
                    alt=""
                    class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                    data-component="Avatar"
                    height="18"
                    size="18"
                    sx="[object Object]"
                    width="18"
                  />
                  <span
                    class="Text-sc-17v1xeu-0 gCQeDW"
                  >
                    gitify-app/notifications-test
                  </span>
                </div>
              </span>
              <span
                class="Box-sc-g0xbh4-0 bPvALJ"
                data-component="trailingVisual"
                sx="[object Object]"
              >
                <span
                  aria-hidden="true"
                  class="Box-sc-g0xbh4-0 dZZxCI"
                  data-component="ButtonCounter"
                  sx="[object Object]"
                >
                  2
                </span>
                <span
                  class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                >
                   (
                  2
                  )
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <button
              aria-describedby=":r1c:-loading-announcement"
              aria-labelledby=":r1b:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r1b:"
              popover="auto"
            >
              Mark repository as done
            </span>
            <button
              aria-describedby=":r1e:-loading-announcement"
              aria-labelledby=":r1d:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-read"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r1d:"
              popover="auto"
            >
              Mark repository as read
            </span>
            <button
              aria-describedby=":r1g:-loading-announcement"
              aria-labelledby=":r1f:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r1f:"
              popover="auto"
            >
              Hide repository notifications
            </span>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
    >
      <div
        class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
      >
        <button
          aria-describedby=":r1a:-loading-announcement"
          class="types__StyledButton-sc-ws60qy-0 ggqBNv"
          data-loading="false"
          data-no-visuals="true"
          sx="[object Object]"
          title="Open repository"
          type="button"
        >
          <span
            class="Box-sc-g0xbh4-0 lbSBsX"
            data-component="buttonContent"
            sx="[object Object]"
          >
            <span
              data-component="text"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <img
                  alt=""
                  class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                  data-component="Avatar"
                  height="18"
                  size="18"
                  sx="[object Object]"
                  width="18"
                />
                <span
                  class="Text-sc-17v1xeu-0 gCQeDW"
                >
                  gitify-app/notifications-test
                </span>
              </div>
            </span>
            <span
              class="Box-sc-g0xbh4-0 bPvALJ"
              data-component="trailingVisual"
              sx="[object Object]"
            >
              <span
                aria-hidden="true"
                class="Box-sc-g0xbh4-0 dZZxCI"
                data-component="ButtonCounter"
                sx="[object Object]"
              >
                2
              </span>
              <span
                class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
              >
                 (
                2
                )
              </span>
            </span>
          </span>
        </button>
      </div>
      <div
        class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
          data-align="center"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <button
            aria-describedby=":r1c:-loading-announcement"
            aria-labelledby=":r1b:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r1b:"
            popover="auto"
          >
            Mark repository as done
          </span>
          <button
            aria-describedby=":r1e:-loading-announcement"
            aria-labelledby=":r1d:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-read"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r1d:"
            popover="auto"
          >
            Mark repository as read
          </span>
          <button
            aria-describedby=":r1g:-loading-announcement"
            aria-labelledby=":r1f:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-chevron-down"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r1f:"
            popover="auto"
          >
            Hide repository notifications
          </span>
        </div>
      </div>
    </div>
    <div>
      NotificationRow
    </div>
    <div>
      NotificationRow
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`renderer/components/notifications/RepositoryNotifications.tsx should use default repository icon when avatar is not available 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
      >
        <div
          class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
        >
          <button
            aria-describedby=":rs:-loading-announcement"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-loading="false"
            data-no-visuals="true"
            sx="[object Object]"
            title="Open repository"
            type="button"
          >
            <span
              class="Box-sc-g0xbh4-0 lbSBsX"
              data-component="buttonContent"
              sx="[object Object]"
            >
              <span
                data-component="text"
              >
                <div
                  class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                  data-align="center"
                  data-direction="horizontal"
                  data-gap="condensed"
                  data-justify="start"
                  data-padding="none"
                  data-wrap="nowrap"
                >
                  <img
                    alt=""
                    class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                    data-component="Avatar"
                    height="18"
                    size="18"
                    sx="[object Object]"
                    width="18"
                  />
                  <span
                    class="Text-sc-17v1xeu-0 gCQeDW"
                  >
                    gitify-app/notifications-test
                  </span>
                </div>
              </span>
              <span
                class="Box-sc-g0xbh4-0 bPvALJ"
                data-component="trailingVisual"
                sx="[object Object]"
              >
                <span
                  aria-hidden="true"
                  class="Box-sc-g0xbh4-0 dZZxCI"
                  data-component="ButtonCounter"
                  sx="[object Object]"
                >
                  2
                </span>
                <span
                  class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
                >
                   (
                  2
                  )
                </span>
              </span>
            </span>
          </button>
        </div>
        <div
          class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
        >
          <div
            class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
            data-align="center"
            data-direction="horizontal"
            data-gap="none"
            data-justify="start"
            data-padding="none"
            data-wrap="nowrap"
          >
            <button
              aria-describedby=":ru:-loading-announcement"
              aria-labelledby=":rt:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-check"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":rt:"
              popover="auto"
            >
              Mark repository as done
            </span>
            <button
              aria-describedby=":r10:-loading-announcement"
              aria-labelledby=":rv:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-read"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":rv:"
              popover="auto"
            >
              Mark repository as read
            </span>
            <button
              aria-describedby=":r12:-loading-announcement"
              aria-labelledby=":r11:"
              class="types__StyledButton-sc-ws60qy-0 ggqBNv"
              data-component="IconButton"
              data-loading="false"
              data-no-visuals="true"
              data-size="small"
              sx="[object Object]"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="octicon octicon-chevron-down"
                display="inline-block"
                fill="currentColor"
                focusable="false"
                height="16"
                overflow="visible"
                style="vertical-align: text-bottom;"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
                />
              </svg>
            </button>
            <span
              aria-hidden="true"
              class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
              data-direction="s"
              id=":r11:"
              popover="auto"
            >
              Hide repository notifications
            </span>
          </div>
        </div>
      </div>
      <div>
        NotificationRow
      </div>
      <div>
        NotificationRow
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="group flex justify-between pr-1 py-0.5 bg-gitify-notifications dark:text-white"
    >
      <div
        class="flex flex-1 gap-3 items-center truncate text-sm font-medium"
      >
        <button
          aria-describedby=":rs:-loading-announcement"
          class="types__StyledButton-sc-ws60qy-0 ggqBNv"
          data-loading="false"
          data-no-visuals="true"
          sx="[object Object]"
          title="Open repository"
          type="button"
        >
          <span
            class="Box-sc-g0xbh4-0 lbSBsX"
            data-component="buttonContent"
            sx="[object Object]"
          >
            <span
              data-component="text"
            >
              <div
                class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
                data-align="center"
                data-direction="horizontal"
                data-gap="condensed"
                data-justify="start"
                data-padding="none"
                data-wrap="nowrap"
              >
                <img
                  alt=""
                  class="Avatar__StyledAvatar-sc-2lv0r8-0 bzLWVf"
                  data-component="Avatar"
                  height="18"
                  size="18"
                  sx="[object Object]"
                  width="18"
                />
                <span
                  class="Text-sc-17v1xeu-0 gCQeDW"
                >
                  gitify-app/notifications-test
                </span>
              </div>
            </span>
            <span
              class="Box-sc-g0xbh4-0 bPvALJ"
              data-component="trailingVisual"
              sx="[object Object]"
            >
              <span
                aria-hidden="true"
                class="Box-sc-g0xbh4-0 dZZxCI"
                data-component="ButtonCounter"
                sx="[object Object]"
              >
                2
              </span>
              <span
                class="_VisuallyHidden__VisuallyHidden-sc-11jhm7a-0 ajbWx"
              >
                 (
                2
                )
              </span>
            </span>
          </span>
        </button>
      </div>
      <div
        class="flex items-center justify-center opacity-0 transition-opacity group-hover:opacity-80"
      >
        <div
          class="Stack__StyledStack-sc-x3xa2i-0 dStkQv"
          data-align="center"
          data-direction="horizontal"
          data-gap="none"
          data-justify="start"
          data-padding="none"
          data-wrap="nowrap"
        >
          <button
            aria-describedby=":ru:-loading-announcement"
            aria-labelledby=":rt:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-check"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M13.78 4.22a.75.75 0 0 1 0 1.06l-7.25 7.25a.75.75 0 0 1-1.06 0L2.22 9.28a.751.751 0 0 1 .018-1.042.751.751 0 0 1 1.042-.018L6 10.94l6.72-6.72a.75.75 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":rt:"
            popover="auto"
          >
            Mark repository as done
          </span>
          <button
            aria-describedby=":r10:-loading-announcement"
            aria-labelledby=":rv:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-read"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M7.115.65a1.752 1.752 0 0 1 1.77 0l6.25 3.663c.536.314.865.889.865 1.51v6.427A1.75 1.75 0 0 1 14.25 14H1.75A1.75 1.75 0 0 1 0 12.25V5.823c0-.621.33-1.196.865-1.51Zm1.011 1.293a.252.252 0 0 0-.252 0l-5.72 3.353L6.468 7.76a2.748 2.748 0 0 1 3.066 0l4.312-2.464-5.719-3.353ZM13.15 12.5 8.772 9.06a1.25 1.25 0 0 0-1.544 0L2.85 12.5Zm1.35-5.85-3.687 2.106 3.687 2.897ZM5.187 8.756 1.5 6.65v5.003Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":rv:"
            popover="auto"
          >
            Mark repository as read
          </span>
          <button
            aria-describedby=":r12:-loading-announcement"
            aria-labelledby=":r11:"
            class="types__StyledButton-sc-ws60qy-0 ggqBNv"
            data-component="IconButton"
            data-loading="false"
            data-no-visuals="true"
            data-size="small"
            sx="[object Object]"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="octicon octicon-chevron-down"
              display="inline-block"
              fill="currentColor"
              focusable="false"
              height="16"
              overflow="visible"
              style="vertical-align: text-bottom;"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M12.78 5.22a.749.749 0 0 1 0 1.06l-4.25 4.25a.749.749 0 0 1-1.06 0L3.22 6.28a.749.749 0 1 1 1.06-1.06L8 8.939l3.72-3.719a.749.749 0 0 1 1.06 0Z"
              />
            </svg>
          </button>
          <span
            aria-hidden="true"
            class="Tooltip__StyledTooltip-sc-e45c7z-0 gdnrwk"
            data-direction="s"
            id=":r11:"
            popover="auto"
          >
            Hide repository notifications
          </span>
        </div>
      </div>
    </div>
    <div>
      NotificationRow
    </div>
    <div>
      NotificationRow
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
